<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="PrivateResource">M Explorer</string>
    <!--sign in/up-->
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="forget_password">Forgot password?</string>
    <string name="sign_in">Sign in</string>
    <string name="login_with">Login With</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>

    <!--Navigation-->
    <string name="profile">Profile</string>
    <string name="percentage">Percentage and memory left</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sign_out">Sign Out</string>
    <string name="plus">Plus</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>

    <!--for login face-->
    <string name="facebook_app_id">218083235510756</string>
    <string name="fb_login_protocol_scheme">fb218083235510756</string>
    <string name="please_wait">Please wait…</string>
    <string name="number_check">Number check</string>
    <string name="new_password">New password</string>
    <string name="download">Download</string>
    <string name="_1223_kb">1223 KB</string>

    <string name="book_mark">Bookmark</string>
    <string name="no_folders_or_files">No folders or files</string>

    <!--Test-->
    <string name="new_folder">New Folder</string>
    <string name="label_save">Save</string>
    <string name="new_file">New File</string>
    <string name="encrypt_the_content">Encrypt the content</string>
    <string name="label_content">Content</string>
    <string name="label_name">Name</string>
    <string name="label_decrypt">Decrypt</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_delete">Delete</string>
    <string name="new_name">New name</string>
    <string name="current_name">Current name</string>
    <string name="drop_here">DROP HERE</string>
    <string name="decline">DECLINE</string>
    <string name="folder_options">Folder options</string>
    <string name="file_options">File options</string>
    <string name="moving_file">Moving: %1$s</string>
    <string name="copy_file">Copying: %1$s</string>
    <string name="switch_to_internal">Switch to internal</string>
    <string name="order_by">Order by …</string>
    <string name="filter">Filter</string>
    <string name="add_new_items">Add new items</string>

    <!--drop box-->
    <string name="drbx_key">mzbf7iesot0oc5u</string>
    <string name="drbx_secret">naj221wscst1316</string>


    <!--one drive-->
    <string name="ODkey">drturY80_snZRNFTI844^*_</string>
    <string name="ODid" tools:ignore="TypographyDashes">f8ecd10b-ab84-40af-a74e-258bf48f90f2</string>

    <string name="name_device">Name Device</string>
    <string name="location_device">Location device</string>
    <string name="google_drive">Google Drive</string>
    <string name="drop_box">Drop box</string>
    <string name="one_drive">One Drive</string>
    <string name="box">Box</string>
    <string name="new_image">New image</string>
    <string name="new_text_file">New text file</string>
    <string name="new_folder_">New folder</string>
    <string name="avaiable_offline">Avaiable offline</string>
    <string name="share">Share</string>
    <string name="device_connected">Device connected</string>
    <string name="authentication">Authentication</string>
    <string name="new_">New</string>
    <string name="upload_folder">Upload Folder</string>
    <string name="upload_file">Upload File</string>
    <string name="take_photo">Take Photo</string>
    <string name="share_this_content">Share this content</string>
    <string name="rename">Rename</string>
    <string name="copy">Copy</string>
    <string name="move">Move</string>
    <string name="delete">Delete</string>

    <string name="ads_id">ca-app-pub-4821856613666036/2505927770</string>
    <string name="ads_app">ca-app-pub-4821856613666036~4776867892</string>

    <string name="ads_id_redeem">ca-app-pub-4821856613666036/9670511044</string>

    <string name="ads_id_vid">ca-app-pub-4821856613666036/9234987659</string>

    <string name="time">Time</string>
    <string name="online">Current</string>
    <string name="update_profile_image">Update Profile Image</string>
    <string name="update">Update</string>
    <string name="edit_name">Edit Name</string>
    <string name="create_password">Create password</string>
    <string name="buy_more_space">Get more</string>
    <string name="update_account">Upgrade account</string>


    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">Early access</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="key_upgrade_acc">key_gallery_name</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="pref_header_general">General</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>



    <string name="setting">Setting</string>
    <string name="upgrade_account">Upgrade account</string>
    <string name="moving_file_txt">Moving: file.txt</string>
    <string name="clouds">Clouds</string>
</resources>
