<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_black_24dp"
            app:showAsAction="ifRoom"
            android:orderInCategory="1"
            android:title="@string/home"/>
        <item
            android:id="@+id/bookmark"
            android:icon="@drawable/ic_bookmark"
            android:orderInCategory="100"
            app:showAsAction="always"
            android:title="@string/book_mark" />
        <item
            android:id="@+id/signout"
            android:icon="@drawable/ic_sign_out"
            app:showAsAction="always"
            android:orderInCategory="101"
            android:title="@string/sign_out"/>
    </group>
</menu>