<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_hideable="true"
    android:background="@color/lightgray"
    android:clipToPadding="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    style="@style/AppTheme_">

    <TextView
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_share"
        android:drawablePadding="16dp"
        android:text="@string/share_this_content"
        android:textSize="20sp"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/rename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_rename"
        android:drawablePadding="16dp"
        android:text="@string/rename"
        android:textSize="20sp"
        android:padding="16dp"/>


    <TextView
        android:id="@+id/copyFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_copy"
        android:drawablePadding="16dp"
        android:text="@string/copy"
        android:textSize="20sp"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/moveFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_move_folder"
        android:drawablePadding="16dp"
        android:text="@string/move"
        android:textSize="20sp"
        android:padding="16dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_delete"
        android:text="@string/delete"
        android:id="@+id/deleteFile"
        android:textSize="20sp"
        android:padding="16dp"
        />

</LinearLayout>