<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/customize_bottomsheet"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp">


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="end"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/checkggDrive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_logo_google_drive"
            android:drawablePadding="8dp"
            android:layoutDirection="rtl"
            android:padding="8dp"
            android:text="@string/google_drive" />

        <RadioButton
            android:id="@+id/checkDropbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_logo_dropbox"
            android:drawablePadding="8dp"
            android:layoutDirection="rtl"
            android:padding="8dp"
            android:text="@string/drop_box" />

        <RadioButton
            android:id="@+id/checkOneDrive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_logo_onedrive"
            android:drawablePadding="8dp"
            android:layoutDirection="rtl"
            android:checked="true"
            android:padding="8dp"
            android:text="@string/one_drive" />
    </RadioGroup>

    <Button
        android:id="@+id/googledrive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/add_new_items"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nameNewCloud" />

    <EditText
        android:id="@+id/nameNewCloud"
        android:layout_marginTop="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/googledrive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:ignore="Autofill,LabelFor" />
</androidx.constraintlayout.widget.ConstraintLayout>